--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,16 +4,12 @@ trigger:
 pool:
   vmImage: 'ubuntu-16.04'
   demands:
-  - npm
-
-variables:
-  buildConfiguration: 'Release'
+    - npm
 
 steps:
 - task: UseDotNet@2
   displayName: 'Use .NET Core SDK 3.1.100'
   inputs:
-    packageType: sdk
     version: 3.1.100
 
 - task: Npm@1
@@ -43,3 +39,5 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
+
+- tarea: DotNetCoreCLI@2 displayName: 'Publicar el proyecto - Liberar' entradas: comando: 'publicar' proyectos: '**/*.csproj' publishWebProjects: argumentos falsos: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release' zipAfterPublish: true - task: PublishBuildArtifacts@1 displayName: 'Publish Artifact: drop' condition: succeeded()
